<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/login_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        tools:layout_editor_absoluteY="50dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/login_riv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_author"
            app:shapeAppearance="@style/circleStyle" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_riv"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/user_name"
            app:endIconMode="clear_text"
            app:counterEnabled="false"
            app:counterMaxLength="10"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_ed_name"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_ed_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_button_bg"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <View
                style="@style/HorizontalLineStyle"
                android:layout_width="60dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/otherLogin"
                android:textColor="@color/black50" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_width="60dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/login_qq"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="25dp"
                android:src="@drawable/ic_qq" />

        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>